fix: change wrapping style

--- a/style.css
+++ b/style.css
@@ -16,9 +16,8 @@ body {
 }
 
 .wrapper {
-  max-width: 100px;
-  margin: 0 auto;
-  padding: 0 20px;
+  width: 100%;
+  padding: 10px;
 }
 
 .container {
